# RedditStockSignal

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  reddit-signal-plan.md
.cursor/: rules
alembic/: env.py
alembic/versions/: 001_create_raw_tables.py  002_create_poller_state.py  003_create_wsb_capture_stats.py  004_enable_raw_compression.py  005_create_tickers.py
data/: MANIFEST.md
scripts/: capture_report.py  classify_candidates.py  load_archive.py  load_tickers.py  mine_corpus_tickers.py  promote_corpus_tickers.py  recompress_chunks.sh  reddit_smoke_test.py  run_ingest.py
src/: config.py
src/archive/: __init__.py  loader.py
src/backtest/: __init__.py
src/db/: __init__.py  models.py  session.py
src/extract/: __init__.py
src/ingest/: __init__.py  backoff.py  comment_poller.py  comments.py  constants.py  daily_thread.py  metrics.py  post_poller.py  reddit_client.py  repository.py  runner.py  serialize.py  wsb_daily.py
src/signal/: __init__.py
src/tickers/: __init__.py  aliases.py  loader.py  normalize.py  stoplist.py
tests/: __init__.py  test_archive_loader.py  test_capture_report.py  test_config.py  test_db_models.py  test_db_session.py  test_ingest_backoff.py  test_ingest_comments.py  test_ingest_constants.py  test_ingest_daily_thread.py  test_ingest_metrics.py  test_ingest_serialize.py  test_ingest_wsb_cold_start.py  test_ingest_wsb_daily.py  test_tickers_loader.py  test_tickers_normalize.py
tests/fixtures/: archive_comments_sample.jsonl
