[project]
name = "reddit-signal"
version = "0.1.0"
description = "Reddit-based stock discovery: ingest, extract tickers, detect anomalies, backtest."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "asyncpraw>=8.0.2",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scipy>=1.18.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "vadersentiment>=3.3.2",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
